@@ -55,7 +55,9 @@ public class VdcUtil {
     }
     
     public static void setDbClient(DbClient dbclient) {
-        dbClient = dbclient;
+        //Suppress Sonar violation of Lazy initialization of static fields should be synchronized
+        //only called once when spring initialization, so it's safe to ignore sonar violation
+        dbClient = dbclient; //NOSONAR (squid:S2444)
     }
 
     public static String getFirstVdcId() {
@@ -164,7 +166,7 @@ public class VdcUtil {
                             localVdc = vdc;
                         }
                     }
-                    if (vdcIdMap.size() > 0) {
+                    if (!vdcIdMap.isEmpty()) {
                         rebuildVdcIdMap = false;
                     }
                 }
@@ -232,7 +234,7 @@ public class VdcUtil {
 				String part2 = parts2[index];
 				int result = 0;
 				if(StringUtils.isNumeric(part1) && StringUtils.isNumeric(part2)){
-					result = (new Integer(part1)).compareTo(new Integer(part2));
+					result = (Integer.valueOf(part1).compareTo(Integer.valueOf(part2)));
 				}else{
 					result = part1.compareToIgnoreCase(part2);
 					
